bynkc/tests/fixtures/positive/248_history_property/src/demo/wallet.bynk
context demo.wallet

type Amount = Int where Positive

agent Wallet {
  key id: String

  store balance: Cell[Int] = 0

  invariant nonneg: balance >= 0

  on call topUp(amount: Amount) -> Effect[()] {
    balance.update((b) => b + amount)
  }

  on call spend(amount: Amount) -> Effect[()] {
    balance.update((b) => b - amount)
  }
}
